[gd_scene load_steps=6 format=3 uid="uid://magic_sigil"]

[ext_resource type="Script" path="res://src/ui/components/MagicSigil.gd" id="1_script"]

[sub_resource type="Gradient" id="Gradient_glow"]
offsets = PackedFloat32Array(0, 0.4, 0.7, 1)
colors = PackedColorArray(1, 0.9, 0.5, 0.8, 1, 0.6, 0.2, 0.5, 0.8, 0.3, 0.1, 0.2, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sigil"]
gradient = SubResource("Gradient_glow")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ring_bold"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.8, 0.4, 0.1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ring_thin"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.8, 0.4, 0.15)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[node name="MagicSigil" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(500, 500)
mouse_filter = 2
texture = SubResource("GradientTexture2D_sigil")
script = ExtResource("1_script")

[node name="OuterRing" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -420.0
offset_right = 420.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(420, 420)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ring_bold")

[node name="InnerRing" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -280.0
offset_right = 280.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(280, 280)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ring_thin")

[node name="Hexagon" type="Polygon2D" parent="."]
position = Vector2(500, 500)
color = Color(1, 0.8, 0.4, 0.1)
offset = Vector2(-500, -500)
antialiased = true
polygon = PackedVector2Array(500, 300, 673, 400, 673, 600, 500, 700, 327, 600, 327, 400)

[node name="HexLine" type="Line2D" parent="Hexagon"]
points = PackedVector2Array(500, 300, 673, 400, 673, 600, 500, 700, 327, 600, 327, 400, 500, 300)
width = 2.0
default_color = Color(1, 0.8, 0.4, 0.2)

[node name="RuneRing" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OuterRuneRing" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
